week12/kubernetes/network-policy-allow-internal.yaml
# Permite que Nginx se comunique con el backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-server
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 8000
